# napari_dashboard

./: .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  dashboard.js  download_stats.js  index.html  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: big_query_update.yml  refresh_webpage.yml  weekly_zulip_report.yml
data/: bquxjob_11625137_19233b50ca9.json  bquxjob_5e980384_19233ba88bd.json
migrations/versions/: 448ce7fe4091_add_date_column_to_pypi_model.py
notebooks/: forum.ipynb  github.ipynb  pypi.ipynb  update_commits.py
src/napari_dashboard/: api_update.py  big_querry_update.py  big_query_update.py  gdrive_util.py  get_weekly_summary.py  plugins_info.py  utils.py  webpage_update.py
src/napari_dashboard/db_schema/: base.py  conda.py  github.py  helper_models.py  imagesc.py  pypi.py
src/napari_dashboard/db_update/: __main__.py  conda.py  github.py  imagesc.py  pypi.py  util.py
src/napari_dashboard/gen_stat/: conda.py  generate_excel_file.py  github.py  imagesc.py  pypi.py
src/napari_dashboard/get_webpage/: __init__.py  __main__.py  gdrive.py  html_gen.py
src/napari_dashboard/get_webpage/data/: countries.csv
src/napari_dashboard/get_webpage/webpage_tmpl/: dashboard.js  download_stats.js  index.html
